crates/pardosa-schema/tests/compile_fail/usize_field.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    count: usize,
}
fn main() {}
