crates/pardosa-schema/tests/compile_fail/usize_field.stderr
error: EVT-004: GenomeSafe: usize has platform-dependent size. Use u32/u64 for portable serialization.
 --> tests/compile_fail/usize_field.rs:4:12
  |
4 |     count: usize,
  |            ^^^^^
